SFDC_LD_Packages/objects-layouts/main/default/objects/Order_Verification__c/Order_Verification__c.object-meta.xml
<CustomObject>
    <label>Order Verification</label>
    <nameField>
        <displayFormat>Verification - {0}</displayFormat>
        <label>Order Verification</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Verifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>