SFDC_LD_Packages/objects-layouts/main/default/objects/Order_Verification__c/fields/Account_LD_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_LD_ID__c</fullName>
    <formula>Opportunity__r.Account.LD_Account_ID__c</formula>
    <label>Account LD ID</label>
    <type>Text</type>
</CustomField>