SFDC_LD_Packages/objects-layouts/main/default/objects/Order_Verification__c/fields/Finance_Checked_By__c.field-meta.xml
<CustomField>
    <fullName>Finance_Checked_By__c</fullName>
    <label>Finance Checked By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>