SFDC_LD_Packages/objects-layouts/main/default/objects/Order_Verification__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Financial_Information</relationshipName>
    <type>Lookup</type>
</CustomField>