SFDC_LD_Packages/objects-layouts/main/default/objects/Order_Verification__c/fields/Pre_Verified__c.field-meta.xml
<CustomField>
    <fullName>Pre_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pre-Verified</label>
    <type>Checkbox</type>
</CustomField>