SFDC_LD_Packages/objects-layouts/main/default/objects/Order_Verification__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Closed Lost</fullName>
            </value>
            <value>
                <fullName>Awaiting Response</fullName>
                <isActive>false</isActive>
                <label>Awaiting Response</label>
            </value>
            <value>
                <fullName>Under Review</fullName>
                <isActive>false</isActive>
                <label>Under Review</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>