SFDC_LD_Packages/objects-layouts/main/default/objects/Order_Verification__c/validationRules/Approved.validationRule-meta.xml
<ValidationRule>
    <fullName>Approved</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Status__c, &quot;Approved&quot;),
 Opportunity_Stage__c != &quot;7W - Closed Won&quot;
)</errorConditionFormula>
    <errorMessage>Opportunity must be Closed Won before Approved</errorMessage>
</ValidationRule>