SFDC_LD_Packages/objects-layouts/main/default/objects/Order_Verification__c/validationRules/Verify_LD_ID.validationRule-meta.xml
<ValidationRule>
    <fullName>Verify_LD_ID</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
ISPICKVAL(Status__c, &quot;Approved&quot;),
 Account_LD_ID_Verified__c = FALSE
)</errorConditionFormula>
    <errorMessage>Please verify Account LD ID before Approving</errorMessage>
</ValidationRule>