SFDC_LD_Packages/objects-layouts/main/default/objects/Order_Verification__c/listViews/Pending_Verification.listView-meta.xml
<ListView>
    <fullName>Pending_Verification</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Revenue__c</columns>
    <filterScope>Everything</filterScope>
    <label>Pending Verification</label>
</ListView>